--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,37 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ng serve",
+      "name": "Attach to Chrome",
+      "port": 9222,
+      "request": "attach",
       "type": "chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "webRoot": "${workspaceFolder}"
     },
     {
-      "name": "ng test",
+      "name": "debug-angular-serve",
       "type": "chrome",
       "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
+      "preLaunchTask": "npm: start-debug",
+      "url": "http://localhost:9200",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
+      "name": "debug-angular-test",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:9876/debug.html",
+      "webRoot": "${workspaceFolder}",
+      "sourceMapPathOverrides": {
+        "./src/*": "${workspaceFolder}/src/*"
+      }
+    },
+    {
+      "name": "debug-angular-e2e",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/node_modules/protractor/bin/protractor",
+      "args": ["${workspaceFolder}/e2e/protractor.conf.js"]
     }
   ]
 }
