Added translation dropdown

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/assets/styles/index.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
